--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "port": 8889,
-    "database": "SnapBiz_db",
+    "password": "Fighter840",
+    "database": "Snapbiz_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "Fighter840",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
+    "password": "Fighter840",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
