fixed some wonky stuff in the profie html page, and moved input file css into profile.css

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "Fighter840",
-    "database": "Snapbiz_db",
+    "password": "root",
+    "port": 8889,
+    "database": "SnapBiz_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
