--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@google-cloud/vision": "^0.12.0",
     "body-parser": "^1.18.2",
+    "browserify": "^14.5.0",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
     "mysql": "^2.15.0",
