--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "port": 8889,
-    "database": "SnapBiz_db",
+    "password": "Fighter840",
+    "database": "Snapbiz_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
