updated media queries, checked indentation in html, added some logo variations

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "Fighter840",
+    "password": "root",
     "database": "Snapbiz_db",
+    "port": 8889,
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
