--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
     "faker": "^4.1.0",
+    "json2csv": "^3.11.5",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
     "sequelize": "^4.19.0"
