--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@google-cloud/vision": "^0.12.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
     "json2csv": "^3.11.5",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
